--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@terminusdb/terminus-client": "file:../terminus-client",
     "classnames": "^2.2.5",
     "core-js": "^3.4.2",
+    "d3": "^5.15.1",
+    "dotenv-webpack": "^1.7.0",
     "prop-types": "^15.6.0",
     "react-sizeme": "^2.6.10",
     "reactstrap": "^8.2.0",
@@ -71,6 +73,7 @@
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^5.2.1",
+    "css-loader": "^3.5.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^5.6.0",
@@ -98,6 +101,7 @@
     "react-test-renderer": "^16.12.0",
     "rimraf": "^2.7.1",
     "sinon": "^7.5.0",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
