--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "terminusdb"
   ],
   "scripts": {
-    "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js'",
+    "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js' ",
     "build": "npm run build-es6 && webpack --mode production",
     "start": "webpack-dev-server --progress --port 3008 --host localhost --content-base demo --inline --config demo/webpack.config.js",
     "test": "cross-env NODE_ENV=test karma start test/karma.conf.js",
@@ -37,12 +37,16 @@
   "author": "terminusdb group",
   "peerDependencies": {
     "react": "^16.10.3",
-    "react-dom": "^16.10.3"
+    "react-dom": "^16.10.3",
+    "@fortawesome/fontawesome-free": "^5.13.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@terminusdb/terminus-client": "file:../terminus-client",
     "classnames": "^2.2.5",
     "core-js": "^3.4.2",
+    "d3": "^5.15.0",
+    "dotenv-webpack": "^1.7.0",
     "prop-types": "^15.6.0",
     "react-sizeme": "^2.6.10",
     "reactstrap": "^8.2.0",
@@ -70,7 +74,9 @@
     "babel-preset-airbnb": "^2.6.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.2.1",
+    "css-loader": "^3.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^5.6.0",
@@ -79,6 +85,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "file-loader": "^6.0.0",
     "json-loader": "^0.5.7",
     "karma": "^4.4.0",
     "karma-chai": "^0.1.0",
@@ -89,7 +96,9 @@
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.0-rc.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^4.0.1",
+    "node-sass": "^4.13.1",
     "pre-commit": "^1.1.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -97,7 +106,9 @@
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^2.7.1",
+    "sass-loader": "^8.0.2",
     "sinon": "^7.5.0",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
