--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js": "^3.4.2",
     "d3": "^5.15.0",
     "dotenv-webpack": "^1.7.0",
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.6.0",
     "react-sizeme": "^2.6.10",
     "reactstrap": "^8.2.0",
@@ -76,7 +77,7 @@
     "chai-enzyme": "^1.0.0-beta.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.2.1",
-    "css-loader": "^3.5.0",
+    "css-loader": "^3.5.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^5.6.0",
