--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.1",
   "description": "Chart for terminusdb",
   "main": "src/index",
-  "module": "es6/index",
-  "jsnext:main": "es6/index",
+  "module": "src/index",
+  "jsnext:main": "src/index",
   "sideEffects": [
     "./*/index.js"
   ],
   "files": [
     "*.md",
-    "src",
-    "es6"
+    "src"
   ],
   "keywords": [
     "react",
@@ -21,8 +20,7 @@
     "terminusdb"
   ],
   "scripts": {
-    "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js' ",
-    "build": "npm run build-es6 && webpack --mode production",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --progress --port 3008 --host localhost --content-base demo --inline --config demo/webpack.config.js",
     "test": "echo 'TODO: There should be tests'",
     "lint": "eslint src",
