.travis.yml: only upload bintray on dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 stages:
   - build
   - name: deploy_dev
-    if: branch = master # TODO: A dev branch is probably better
+    if: branch = dev
 
 jobs:
   include:
