package.json: use es6 transpiling

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@terminusdb/terminusdb-react-graph",
   "version": "0.0.1",
   "description": "Chart for terminusdb",
-  "main": "src/index",
+  "main": "lib/index",
   "module": "src/index",
   "jsnext:main": "src/index",
   "sideEffects": [
@@ -19,12 +19,13 @@
     "react-component",
     "terminusdb"
   ],
-  "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --progress --port 3008 --host localhost --content-base demo --inline --config demo/webpack.config.js",
-    "test": "echo 'TODO: There should be tests'",
-    "lint": "eslint src",
-    "autofix": "eslint src --fix"
+    "scripts": {
+      "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js'",
+      "build": "npm run build-es6 && webpack --mode production",
+      "start": "webpack-dev-server --progress --port 3008 --host localhost --content-base demo --inline --config demo/webpack.config.js",
+      "test": "echo 'TODO: There should be tests'",
+      "lint": "eslint src",
+      "autofix": "eslint src --fix"
   },
   "pre-commit": [],
   "pre-push": [
