--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Logs
+.dist
+
 logs
 *.log
 npm-debug.log*
 
+demo/.env
 .env
 # Runtime data
 pids
@@ -38,13 +41,6 @@ jspm_packages
 
 # npm package lock
 package-lock.json
-yarn.lock
-
-others
-.DS_Store
-
-.project
-.settings
 
 cypress/integration/examples01
 
